[gd_scene load_steps=4 format=3 uid="uid://dyxdkp8jarx78"]

[ext_resource type="Script" uid="uid://ep7ruwnvd0fo" path="res://addons/konado/editor/view/popup/character/character_edit_window.gd" id="1_8u0bd"]
[ext_resource type="Texture2D" uid="uid://q2w6piu3t1md" path="res://addons/konado/editor/assets/icon/icon_19.svg" id="2_bx3md"]
[ext_resource type="Texture2D" uid="uid://dgyi8xxvrfl1" path="res://addons/konado/editor/assets/icon/icon_1.svg" id="3_0pty6"]

[node name="character" type="Window" groups=["Window"]]
auto_translate_mode = 1
editor_description = "文本节点的高级编辑器"
transparent_bg = true
oversampling_override = 1.0
title = "角色编辑"
initial_position = 1
size = Vector2i(1100, 700)
visible = false
transient = true
exclusive = true
transparent = true
min_size = Vector2i(1100, 500)
max_size = Vector2i(3840, 2160)
script = ExtResource("1_8u0bd")

[node name="character_card" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"WindowPanel"

[node name="VBoxContainer2" type="VBoxContainer" parent="character_card"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSplitContainer" type="HSplitContainer" parent="character_card/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="character_card/VBoxContainer2/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="status_texture" type="TextureRect" parent="character_card/VBoxContainer2/HSplitContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_bx3md")
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="character_card/VBoxContainer2/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="character_card/VBoxContainer2/HSplitContainer/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="character_card/VBoxContainer2/HSplitContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 6
columns = 2

[node name="Label" type="Label" parent="character_card/VBoxContainer2/HSplitContainer/MarginContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_vertical = 0
text = "名字"

[node name="name" type="LineEdit" parent="character_card/VBoxContainer2/HSplitContainer/MarginContainer/ScrollContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Label3" type="Label" parent="character_card/VBoxContainer2/HSplitContainer/MarginContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_vertical = 0
text = "简介"

[node name="tip" type="TextEdit" parent="character_card/VBoxContainer2/HSplitContainer/MarginContainer/ScrollContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="character_card/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"ButtonContainer"

[node name="StatusManager" type="BoxContainer" parent="character_card/VBoxContainer2/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 70.0
offset_top = 23.0
offset_right = -87.0
offset_bottom = 67.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="character_card/VBoxContainer2/Panel/StatusManager"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_vertical = 0
text = "角色状态"

[node name="add_status" type="Button" parent="character_card/VBoxContainer2/Panel/StatusManager"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "添加状态"
icon = ExtResource("3_0pty6")

[node name="ScrollContainer" type="ScrollContainer" parent="character_card/VBoxContainer2/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = 106.0
offset_right = -47.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatusContainer" type="BoxContainer" parent="character_card/VBoxContainer2/Panel/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
vertical = true

[connection signal="pressed" from="character_card/VBoxContainer2/Panel/StatusManager/add_status" to="." method="_on_add_status_pressed"]
